# VkSelfLearn

./: .gitignore  CMakeLists.txt  README.md
include/: debug.hpp  globVar.hpp  main.hpp  tools.hpp
shaders/basic/: frag.spv  shader.frag  shader.vert  vert.spv
src/: debug.cpp  main.cpp  tools.cpp
