CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(VkSelfLearn VERSION 1.0.0 LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O2 -Wall")
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

IF(WIN32)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mconsole")
ADD_DEFINITIONS(-DMY_ROOT_DIR="${CMAKE_SOURCE_DIR}")
ADD_DEFINITIONS(-DVK_USE_PLATFORM_WIN32_KHR)
ADD_DEFINITIONS(-DNOMINMAX) # override max min functions in windows.h
ENDIF(WIN32)

IF(UNIX)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}")
ENDIF(UNIX)

IF(WIN32)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/bin/Debug")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/bin/Release")
ENDIF(WIN32)

FILE(GLOB_RECURSE SRC_FILES "${CMAKE_SOURCE_DIR}/src/*.cpp")

find_package(Vulkan REQUIRED)

IF(WIN32)
IF(NOT EXISTS "${CMAKE_SOURCE_DIR}/bin")
FILE(MAKE_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
ENDIF()

IF(NOT EXISTS "${CMAKE_SOURCE_DIR}/bin/Debug")
FILE(MAKE_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/Debug")
ENDIF()

IF(NOT EXISTS "${CMAKE_SOURCE_DIR}/bin/Release")
FILE(MAKE_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/Release")
ENDIF()

IF(NOT EXISTS ${CMAKE_SOURCE_DIR}/external/external.zip)
EXECUTE_PROCESS(
    COMMAND git pull origin master
)
ENDIF()

IF(NOT EXISTS "${CMAKE_SOURCE_DIR}/bin/Debug/SDL2.dll")
EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/external/SDL2/bin/SDL2.dll ${CMAKE_SOURCE_DIR}/bin/Debug
)
ENDIF()

IF(NOT EXISTS "${CMAKE_SOURCE_DIR}/bin/Release/SDL2.dll")
EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/external/SDL2/bin/SDL2.dll ${CMAKE_SOURCE_DIR}/bin/Release
)
ENDIF()

INCLUDE_DIRECTORIES(
    "${CMAKE_SOURCE_DIR}/include/"
    "${CMAKE_SOURCE_DIR}/external/SDL2/include"
    "${CMAKE_SOURCE_DIR}/external/glm/include"
    "${Vulkan_INCLUDE_DIRS}"
)

LINK_DIRECTORIES(
    "${CMAKE_SOURCE_DIR}/external/SDL2/lib"
)
ENDIF(WIN32)

IF(UNIX)
FIND_PATH(SDL2_INCLUDE_DIRS SDL.h PATH_SUFFIXES SDL2)
FIND_LIBRARY(SDL2_LIBRARIES SDL2)
IF(SDL2_INCLUDE_DIR_NOTFOUND)
    MESSAGE(FATAL_ERROR "SDL2 is not found on this machine")
ELSE()
    INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
ENDIF()
INCLUDE_DIRECTORIES(
    "${CMAKE_SOURCE_DIR}/include/"
    "${Vulkan_INCLUDE_DIRS}"
)
ENDIF(UNIX)

ADD_EXECUTABLE(VkRun ${SRC_FILES})

IF(WIN32)
TARGET_LINK_LIBRARIES(VkRun
    SDL2main
    SDL2
    ${Vulkan_LIBRARIES}
)
ENDIF(WIN32)

IF(UNIX)
TARGET_LINK_LIBRARIES(VkRun
    ${SDL2_LIBRARIES}
    ${Vulkan_LIBRARIES}
)
ENDIF(UNIX)